# panda_ros2_gazebo

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py  workspace.repos
config/: params.yaml  ros_control.yaml
description/: setup.py
description/models/: __init__.py  sparkplug_socket.dae
description/models/kinect/: kinect.urdf  kinect.xacro
description/models/panda/: panda.urdf
description/models/sparkplug/: model.config  sparkplug.urdf
description/models/sparkplug_socket/: model.config  sparkplug_socket.urdf
docker/: Dockerfile  entrypoint.bash  run.bash
hook/: pythonpath.sh.in
launch/: bringup.launch.py  gazebo.launch.py  kinect.launch.py  panda_pick_and_place.launch.py  panda_ros2_gazebo.launch.py
panda_control/: package.xml  setup.cfg  setup.py
panda_control/config/: params.yaml  ros_control.yaml
panda_control/launch/: bringup.launch.py  gazebo.launch.py  hardware_control.launch.py  kinect.launch.py
panda_control/panda_control/: runner.py
panda_control/panda_control/examples/: panda_follow_trajectory.py  panda_teleop_control.py  (+1 more)
panda_control/rviz/: rviz.rviz
panda_msgs/: CMakeLists.txt  package.xml
panda_msgs/srv/: GetJointTrajectory.srv
panda_ros2_gazebo/: __init__.py  helpers.py  panda_grasping_example.py  panda_pick_and_place.py  panda_teleop_control.py  runner.py  rviz_helper.py  spawn_kinect.py
panda_ros2_gazebo/examples/: panda_follow_trajectory.py  panda_pick_n_insert.py  panda_pick_n_place.py  panda_teleop_control.py
panda_ros2_gazebo/python/: __init__.py
rviz/: rviz.rviz
scripts/: panda_pick_and_place.py
(+23 files in other folders)
