<?xml version="1.0"?>
<package format="3">
    <name>panda_ros2_gazebo</name>
    <version>1.0.0</version>
    <description>ROS2 control interface for Gazebo</description>
    <maintainer email="npalomo@student.ethz.ch">njpalomo</maintainer>
    <author>njpalomo</author>
    <license>BSD</license>

    <depend>hardware_interface</depend>
    <depend>gazebo_ros2_control</depend>

    <exec_depend>joint_state_publisher_gui</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>rclpy</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
